# karu

./: Cargo.toml  PUBLICAR.md  README.md  chat.json  client.py  requirements.txt  server.py  teste.py  usuarios.json
src/: main.rs
