[package]
name = "karu"
version = "0.1.1"
edition = "2026"
default-run = "karu"

[dependencies]
# GUI Eficiente
iced = { version = "0.12", features = ["tokio", "advanced", "image"] }

# Motor Assíncrono e Rede
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
image = "0.24"

# Manipulação de JSON (Igual ao json.loads/dumps do Python)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
